@@ -4,6 +4,7 @@
 - PDL::Complex::tricpy now alias to ctricpy
 - provide override xerbla_ to not insta-exit on bad input
   (works with OpenBLAS and reference LAPACK, not ATLAS)
+- msolve etc now handle native-complex (#10) - thanks @guillepo for report
 
 0.26 2021-11-14
 - Reversible now called TwoWay
